fixed issue with the current conversation not showing. So, now you can click through prev conversations and start new conversations. added a simple messages scroll, for now. plan to add functionality to rename and delte buttons next

--- a/frontend/src/css/styles.module.css
+++ b/frontend/src/css/styles.module.css
@@ -11,10 +11,6 @@
     background: #2f3236;
 }
 
-.editMenu {
-    
-}
-
 .editMenu li {
     background: none;
     color: white;
@@ -41,4 +37,9 @@
 
 .startingMessage {
     margin-top: 25rem;
+}
+
+.scrollableConversation {
+    max-height: 700px;
+    overflow-y: auto;
 }
